[package]
name = "f1nder"
version = "0.1.0"
description = "Search for commands"
authors = ["HudsonPWesel <cswyld7k@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
arboard = "3.6.1"
color-eyre = "0.6.3"
crossterm = "0.29.0"
nucleo = "0.5.0"
nucleo-matcher = "0.3.1"
rand = "0.10.1"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
textwrap = "0.16.2"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
